TripControllerTest-Task3. Static removed